# Breakout

./: CMakeLists.txt
res/font/: abc
res/levels/: level1
res/models/: block
res/shaders/: block_fragment_shader.glsl  block_vertex_shader.glsl  glyphs_fragment_shader.glsl  glyphs_vertex_shader.glsl
src/: ball.cpp  ball.h  game.cpp  game.h  game_level.cpp  game_level.h  main.cpp  player.cpp  player.h
